--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,13 +33,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="#fff"
-            android:textSize="30sp"
+            android:inputType="number"
             android:textAlignment="center"
             android:textColor="#000"
-            android:inputType="number"/>
+            android:textSize="30sp" />
 
         <ImageView
-            android:id="@+id/btnPlay"
+            android:id="@+id/ivBtnPlay"
             android:layout_width="150dp"
             android:layout_height="60dp"
             android:layout_margin="10dp"
