--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,5 +15,12 @@
         <item name="colorPrimaryDark">#25894C</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="AppTheme.NoActionBar.TabActivity" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+
+        <item name="colorPrimary">#1AB225</item>
+        <item name="colorPrimaryDark">#25894C</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
 
 </resources>
