--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,19 +29,20 @@
 
         <EditText
             android:id="@+id/etNumber"
-            android:layout_width="250dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="#fff"
             android:inputType="number"
             android:textAlignment="center"
             android:textColor="#000"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:hint="How many tab to win"/>
 
         <ImageView
             android:id="@+id/ivBtnPlay"
-            android:layout_width="150dp"
-            android:layout_height="60dp"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
             android:layout_margin="10dp"
             android:src="@drawable/playbtn" />
     </LinearLayout>
